# kasa-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIG.md  EXAMPLES.md  SRD-kasa-cli.md  TROUBLESHOOTING.md  USAGE.md
src/kasa_cli/: __init__.py  __main__.py  auth_cache.py  cli.py  colors.py  config.py  credentials.py  errors.py  output.py  parallel.py  types.py  wrapper.py
src/kasa_cli/verbs/: __init__.py  batch_cmd.py  discover_cmd.py  energy_cmd.py  groups_cmd.py  info_cmd.py  list_cmd.py  onoff.py  schedule_cmd.py  set_cmd.py  toggle_cmd.py
tests/: conftest.py  test_auth_cache.py  test_cli.py  test_cli_phase2.py  test_colors.py  test_config.py  test_credentials.py  test_errors.py  test_group_target.py  test_live_device.py  test_logging_file.py  test_output.py  test_parallel.py  test_signal_handler.py  test_types.py  test_verbs.py  test_verbs_batch.py  test_verbs_energy.py  test_verbs_groups.py  test_verbs_schedule.py  test_verbs_set.py  test_verbs_toggle.py  test_wrapper.py
