[project]
name = "kasa-cli"
version = "0.3.1"
description = "Deterministic local-LAN CLI for TP-Link Kasa smart devices"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
authors = [{ name = "Dan Elliott" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: System :: Networking",
]
dependencies = [
  "python-kasa>=0.10.2,<0.11",
  "click>=8.1",
]

[project.scripts]
kasa-cli = "kasa_cli.__main__:main"

[project.urls]
Repository = "https://github.com/agileguy/kasa-cli"
Issues = "https://github.com/agileguy/kasa-cli/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kasa_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
